Memory analysis done

--- a/pom.xml
+++ b/pom.xml
@@ -321,5 +321,10 @@
             <artifactId>java-sizeof</artifactId>
             <version>0.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.16</version>
+        </dependency>
     </dependencies>
 </project>
